fix overflowing video issue

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a {
     margin-right: auto;
     color: white;
     font-style: italic;
+    overflow: hidden;
 }
 
 .floating-text-container {
@@ -91,18 +92,6 @@ h1 {
     font-style: normal;
     margin: 10px;
     visibility: hidden;
-}
-
-.new-video-image-container {
-    height: 100px;
-}
-
-.new-video-image {
-    position: absolute;
-    right: 23px;
-    bottom: 20px;
-    height: 100px;
-    width: 100px;
 }
 
 li {
